--- a/modules/administration-guide/partials/proc_applying-an-oauth-2-application-link-secret-for-the-bitbucket-server.adoc
+++ b/modules/administration-guide/partials/proc_applying-an-oauth-2-application-link-secret-for-the-bitbucket-server.adoc
@@ -7,7 +7,7 @@
 [id="applying-an-oauth-2-application-link-secret-for-the-bitbucket-server"]
 = Applying an oauth-2 application link Secret for the Bitbucket Server
 
-Prepare and apply an application link Secret for the Bitbucket Server.
+Prepare and apply the application link Secret for the Bitbucket Server.
 
 .Prerequisites
 
