--- a/modules/administration-guide/partials/proc_applying-an-oauth-2-application-link-secret-for-the-bitbucket-server.adoc
+++ b/modules/administration-guide/partials/proc_applying-an-oauth-2-application-link-secret-for-the-bitbucket-server.adoc
@@ -11,7 +11,7 @@ Prepare and apply the application link Secret for the Bitbucket Server.
 
 .Prerequisites
 
-* The application link is set up in the Bitbucket Server.
+* The application link is set up on the Bitbucket Server.
 
 * The Base64-encoded values, which were generated when setting up the Bitbucket application link, are prepared:
 ** Bitbucket Client ID
