--- a/modules/administration-guide/partials/proc_applying-an-oauth-2-application-link-secret-for-the-bitbucket-server.adoc
+++ b/modules/administration-guide/partials/proc_applying-an-oauth-2-application-link-secret-for-the-bitbucket-server.adoc
@@ -14,8 +14,8 @@ Prepare and apply the application link Secret for the Bitbucket Server.
 * The application link is set up on the Bitbucket Server.
 
 * The Base64-encoded values, which were generated when setting up the Bitbucket application link, are prepared:
-** Bitbucket Client ID
-** Bitbucket Client Secret
+** Bitbucket *Client ID*
+** Bitbucket *Client secret*
 
 * An active `{orch-cli}` session with administrative permissions to the destination {orch-name} cluster. See {orch-cli-link}.
 
