--- a/modules/administration-guide/partials/proc_applying-an-oauth-2-application-link-secret-for-the-bitbucket-server.adoc
+++ b/modules/administration-guide/partials/proc_applying-an-oauth-2-application-link-secret-for-the-bitbucket-server.adoc
@@ -43,8 +43,8 @@ data:
 ----
 <1> The {prod-short} namespace. The default is `{prod-namespace}`.
 <2> The URL of the Bitbucket Server.
-<3> The Base64-encoded *Bitbucket Client ID*.
-<4> The Base64-encoded *Bitbucket Client Secret*.
+<3> The Base64-encoded Bitbucket *Client ID*.
+<4> The Base64-encoded Bitbucket *Client secret*.
 
 . Apply the Secret:
 +
