--- a/modules/administration-guide/partials/proc_applying-an-oauth-2-application-link-secret-for-the-bitbucket-server.adoc
+++ b/modules/administration-guide/partials/proc_applying-an-oauth-2-application-link-secret-for-the-bitbucket-server.adoc
@@ -5,7 +5,7 @@
 // :page-aliases:
 
 [id="applying-an-oauth-2-application-link-secret-for-the-bitbucket-server"]
-= Applying an oauth-2 application link Secret for the Bitbucket Server
+= Applying an OAuth 2.0 application link Secret for the Bitbucket Server
 
 Prepare and apply the application link Secret for the Bitbucket Server.
 
