--- a/modules/administration-guide/partials/proc_applying-an-oauth-2-application-link-secret-for-the-bitbucket-server.adoc
+++ b/modules/administration-guide/partials/proc_applying-an-oauth-2-application-link-secret-for-the-bitbucket-server.adoc
@@ -1,5 +1,5 @@
 :_content-type: PROCEDURE
-:description: Applying an oauth-2 application link Secret for the Bitbucket Server
+:description: Applying an OAuth 2.0 application link Secret for the Bitbucket Server
 :keywords: bitbucket, bitbucket-server, application-link, bitbucket-secret
 :navtitle: Applying an application link Secret for the Bitbucket Server
 // :page-aliases:
