--- a/modules/administration-guide/partials/proc_setting-up-an-oauth-2-application-link-on-the-bitbucket-server.adoc
+++ b/modules/administration-guide/partials/proc_setting-up-an-oauth-2-application-link-on-the-bitbucket-server.adoc
@@ -1,7 +1,7 @@
 :_content-type: PROCEDURE
 :description: Setting up an OAuth 2.0 application link on the Bitbucket Server
 :keywords: bitbucket, bitbucket-server, application-link, oauth2
-:navtitle: Setting up an oauth-2 application link on the Bitbucket Server
+:navtitle: Setting up an OAuth 2.0 application link on the Bitbucket Server
 // :page-aliases:
 
 [id="setting-up-an-oauth-2-application-link-on-the-bitbucket-server"]
