--- a/modules/administration-guide/partials/proc_setting-up-an-oauth-2-application-link-on-the-bitbucket-server.adoc
+++ b/modules/administration-guide/partials/proc_setting-up-an-oauth-2-application-link-on-the-bitbucket-server.adoc
@@ -5,7 +5,7 @@
 // :page-aliases:
 
 [id="setting-up-an-oauth-2-application-link-on-the-bitbucket-server"]
-= Setting up an oauth-2 application link on the Bitbucket Server
+= Setting up an OAuth 2.0 application link on the Bitbucket Server
 
 Set up an application link for OAuth 2.0 on the Bitbucket Server.
 
