--- a/modules/administration-guide/partials/proc_setting-up-an-oauth-2-application-link-on-the-bitbucket-server.adoc
+++ b/modules/administration-guide/partials/proc_setting-up-an-oauth-2-application-link-on-the-bitbucket-server.adoc
@@ -7,7 +7,7 @@
 [id="setting-up-an-oauth-2-application-link-on-the-bitbucket-server"]
 = Setting up an OAuth 2.0 application link on the Bitbucket Server
 
-Set up an application link for OAuth 2.0 on the Bitbucket Server.
+Set up an OAuth 2.0 application link on the Bitbucket Server.
 
 .Prerequisites
 
