--- a/modules/administration-guide/pages/configuring-oauth-2-for-a-bitbucket-server.adoc
+++ b/modules/administration-guide/pages/configuring-oauth-2-for-a-bitbucket-server.adoc
@@ -7,7 +7,7 @@
 [id="configuring-oauth-2-for-a-bitbucket-server"]
 = Configuring OAuth 2.0 for a Bitbucket Server
 
-To enable users to work with a remote Git repository that is hosted on a Bitbucket Server:
+You can use OAuth 2.0 to enable users to work with a remote Git repository that is hosted on a Bitbucket Server:
 
 . Set up an application link (OAuth 2.0) on the Bitbucket Server.
 . Apply an application link Secret for the Bitbucket Server.
