--- a/modules/administration-guide/pages/configuring-oauth-2-for-a-bitbucket-server.adoc
+++ b/modules/administration-guide/pages/configuring-oauth-2-for-a-bitbucket-server.adoc
@@ -9,7 +9,7 @@
 
 You can use OAuth 2.0 to enable users to work with a remote Git repository that is hosted on a Bitbucket Server:
 
-. Set up an application link (OAuth 2.0) on the Bitbucket Server.
+. Set up an OAuth 2.0 application link on the Bitbucket Server.
 . Apply an application link Secret for the Bitbucket Server.
 
 include::partial$proc_setting-up-an-oauth-2-application-link-on-the-bitbucket-server.adoc[leveloffset=+1]
