--- a/modules/administration-guide/partials/proc_setting-up-an-oauth-2-application-link-on-the-bitbucket-server.adoc
+++ b/modules/administration-guide/partials/proc_setting-up-an-oauth-2-application-link-on-the-bitbucket-server.adoc
@@ -29,7 +29,7 @@ Set up an OAuth 2.0 application link on the Bitbucket Server.
 $ echo -n '__<Bitbucket_Client_ID>__' | base64
 ----
 
-. Copy the Bitbucket *Client secret* and encode it to Base64 for use when applying the Bitbucket application link Secret:
+. Copy the *Client secret* and encode it to Base64 for use when applying the Bitbucket application link Secret:
 +
 [subs="+quotes,+attributes,+macros"]
 ----
