rewrite the assembly and remove the outdated concept module

--- a/modules/end-user-guide/pages/microsoft-visual-studio-code-open-source-ide.adoc
+++ b/modules/end-user-guide/pages/microsoft-visual-studio-code-open-source-ide.adoc
@@ -7,8 +7,10 @@
 [id="microsoft-visual-studio-code-open-source-ide"]
 = Microsoft Visual Studio Code - Open Source IDE
 
-Microsoft Visual Studio Code - Open Source is the default cloud IDE in a new workspace.
+The {prod-short} build of link:https://github.com/microsoft/vscode[Microsoft Visual Studio Code - Open Source] is the default cloud IDE in a new workspace.
 
-include::partial$con_default-vs-code-extensions.adoc[leveloffset=+1]
+NOTE: Your organization might be using a branded build of this IDE.
+
+You can install extensions for this IDE, as explained in the next section, from the link:https://open-vsx.org/about[Open VSX] registry, which might be xref:administration-guide:extensions-for-microsoft-visual-studio-code-open-source.adoc[configured by the administrator] of your organization's {prod-short} instance.
 
 include::partial$proc_adding-vs-code-extensions.adoc[leveloffset=+1]
