--- a/modules/end-user-guide/pages/microsoft-visual-studio-code-open-source-ide.adoc
+++ b/modules/end-user-guide/pages/microsoft-visual-studio-code-open-source-ide.adoc
@@ -7,10 +7,24 @@
 [id="microsoft-visual-studio-code-open-source-ide"]
 = Microsoft Visual Studio Code - Open Source IDE
 
-The {prod-short} build of link:https://github.com/microsoft/vscode[Microsoft Visual Studio Code - Open Source] is the default cloud IDE in a new workspace.
+The {prod-short} build of link:https://github.com/microsoft/vscode[Microsoft Visual Studio Code - Open Source] is the default cloud IDE of a new workspace.
 
-NOTE: Your organization might be using a branded build of this IDE.
+You can have extensions automatically installed in this IDE for workspaces, as explained in the next section, from the xref:administration-guide:extensions-for-microsoft-visual-studio-code-open-source.adoc[Open VSX registry].
 
-You can install extensions for this IDE, as explained in the next section, from the link:https://open-vsx.org/about[Open VSX] registry, which might be xref:administration-guide:extensions-for-microsoft-visual-studio-code-open-source.adoc[configured by the administrator] of your organization's {prod-short} instance.
+TIP: You can use the link:https://code.visualstudio.com/api/ux-guidelines/command-palette[Command Pallete] to find and run the commands specified in `devfile.yaml`.
+
+[TIP]
+====
+
+You can use *{prod2}* actions in the link:https://code.visualstudio.com/api/ux-guidelines/command-palette[Command Pallete]:
+
+* *{prod2}: Open Dashboard*
+* *{prod2}: Stop Workspace*
+* *{prod2}: Restart Workspace*
+* *{prod2}: Open Documentation*
+
+====
+
+NOTE: You might see your organization's branding in this IDE if your organization customized it through a branded build.
 
 include::partial$proc_adding-vs-code-extensions.adoc[leveloffset=+1]
