--- a/modules/end-user-guide/partials/proc_adding-vs-code-extensions.adoc
+++ b/modules/end-user-guide/partials/proc_adding-vs-code-extensions.adoc
@@ -39,6 +39,7 @@ To install recommended extensions in a restricted environment, consider these op
 
 . xref:starting-a-new-workspace-with-a-clone-of-a-git-repository.adoc[Start a new workspace by using the URL of the remote Git repository] that contains the created `extensions.json` file.
 . In the IDE of the workspace, press kbd:[Ctrl+Shift+X] or go to *Extensions* to find each of the extensions listed in the file.
+. The extension has the label *This extension is enabled globally*.
 
 .Additional resources
 * link:https://www.open-vsx.org/[Open VSX registry - Extensions for Microsoft Visual Studio Code compatible editors]
