--- a/modules/end-user-guide/pages/microsoft-visual-studio-code-open-source-ide.adoc
+++ b/modules/end-user-guide/pages/microsoft-visual-studio-code-open-source-ide.adoc
@@ -16,7 +16,7 @@ TIP: You can use the link:https://code.visualstudio.com/api/ux-guidelines/comman
 [TIP]
 ====
 
-You can use *{prod2}* actions in the link:https://code.visualstudio.com/api/ux-guidelines/command-palette[Command Pallete]:
+You can use *{prod2}* commands by clicking *{prod2}* in the link:https://code.visualstudio.com/api/ux-guidelines/status-bar[Status Bar] or finding them through the link:https://code.visualstudio.com/api/ux-guidelines/command-palette[Command Pallete]:
 
 * *{prod2}: Open Dashboard*
 * *{prod2}: Stop Workspace*
