--- a/modules/end-user-guide/pages/microsoft-visual-studio-code-open-source-ide.adoc
+++ b/modules/end-user-guide/pages/microsoft-visual-studio-code-open-source-ide.adoc
@@ -11,12 +11,12 @@ The {prod-short} build of link:https://github.com/microsoft/vscode[Microsoft Vis
 
 You can have extensions automatically installed in this IDE for workspaces, as explained in the next section, from the xref:administration-guide:extensions-for-microsoft-visual-studio-code-open-source.adoc[Open VSX registry].
 
-TIP: You can use the link:https://code.visualstudio.com/api/ux-guidelines/command-palette[Command Pallete] to find and run the commands specified in `devfile.yaml`.
+TIP: You can use the link:https://code.visualstudio.com/api/ux-guidelines/command-palette[Command Palette] to find and run the commands specified in `devfile.yaml`.
 
 [TIP]
 ====
 
-You can use *{prod2}* commands by clicking *{prod2}* in the link:https://code.visualstudio.com/api/ux-guidelines/status-bar[Status Bar] or finding them through the link:https://code.visualstudio.com/api/ux-guidelines/command-palette[Command Pallete]:
+You can use *{prod2}* commands by clicking *{prod2}* in the link:https://code.visualstudio.com/api/ux-guidelines/status-bar[Status Bar] or finding them through the link:https://code.visualstudio.com/api/ux-guidelines/command-palette[Command Palette]:
 
 * *{prod2}: Open Dashboard*
 * *{prod2}: Stop Workspace*
