remove the mention of the editorconfig file

--- a/modules/end-user-guide/pages/cloud-ides-in-workspaces.adoc
+++ b/modules/end-user-guide/pages/cloud-ides-in-workspaces.adoc
@@ -27,6 +27,4 @@ The most convenient way of using a cloud IDE in {prod-short} is to store IDE con
 
 * xref:defining-a-common-ide.adoc[The `/.che/che-editor.yaml` file] that stores a definition of the chosen IDE.
 
-* IDE-specific configuration files that one would typically store locally for a desktop IDE. For example:
-** xref:microsoft-visual-studio-code-open-source-ide.adoc[The `/.vscode/extensions.json` file.]
-* link:https://editorconfig.org/[The `/.editorconfig` file.]
+* IDE-specific configuration files that one would typically store locally for a desktop IDE. For example, xref:microsoft-visual-studio-code-open-source-ide.adoc[the `/.vscode/extensions.json` file.]
