--- a/modules/end-user-guide/pages/url-parameter-for-the-cloud-ide.adoc
+++ b/modules/end-user-guide/pages/url-parameter-for-the-cloud-ide.adoc
@@ -7,7 +7,7 @@
 [id="url-parameter-for-the-cloud-ide"]
 = URL parameter for the cloud IDE
 
-If the URL for starting a new workspace doesn't contain a URL parameter specifying the integrated development environment (IDE), the workspace loads with the default cloud IDE, which is Microsoft Visual Studio Code - Open Source.
+If the URL for starting a new workspace doesn't contain a parameter specifying the integrated development environment (IDE), the workspace loads with the default cloud IDE, which is Microsoft Visual Studio Code - Open Source.
 
 The URL parameter for specifying another supported cloud IDE is `che-editor=__<editor_key>__`:
 
