--- a/modules/end-user-guide/pages/url-parameter-for-the-cloud-ide.adoc
+++ b/modules/end-user-guide/pages/url-parameter-for-the-cloud-ide.adoc
@@ -9,7 +9,7 @@
 
 If the URL for starting a new workspace doesn't contain a parameter specifying the integrated development environment (IDE), the workspace loads with the default cloud IDE, which is Microsoft Visual Studio Code - Open Source.
 
-The URL parameter for specifying another supported cloud IDE is `che-editor=__<editor_key>__`:
+The URL parameter for specifying a supported cloud IDE is `che-editor=__<editor_key>__`:
 
 [source,subs="+quotes,+attributes,+macros"]
 ----
