docs: Updating GDPR user removal flow, and procedure for obtaining user ID
Signed-off-by: Ilya Buziuk <ibuziuk@redhat.com>

--- a/modules/end-user-guide/pages/using-a-git-provider-access-token.adoc
+++ b/modules/end-user-guide/pages/using-a-git-provider-access-token.adoc
@@ -45,7 +45,7 @@ If you have the link:https://www.gnu.org/software/coreutils/base64[base64] comma
 
 ====
 
-. Visit `pass:c,a,q[{prod-url}]/api/user` in the web browser and copy the `id` value from the response. This is your {prod-short} user ID.
+. Open `pass:c,a,q[{prod-url}]/api/user/id` in the web browser to get your {prod-short} user ID.
 
 . Get your Git provider user ID by following the Git provider's API documentation:
 +
