--- a/modules/administration-guide/pages/removing-user-data.adoc
+++ b/modules/administration-guide/pages/removing-user-data.adoc
@@ -19,25 +19,21 @@ Following this procedure makes the service compliant to EU General Data Protecti
 
 * An active `oc` session with administrative permissions to the OpenShift cluster. See link:https://docs.openshift.com/container-platform/{ocp4-ver}/cli_reference/openshift_cli/getting-started-cli.html[Getting started with the OpenShift CLI].
 
+[WARNING]: 
+The `pass:c,m,a,q[+https:+//__<{prod-host}>__]/swagger/#/user/find_1` and `pass:c,m,a,q[+https:+//__<{prod-host}>__]/swagger/#/user/remove` endpoints are deprecated. 
+Information about new users is no longer stored in the PostgreSQL database. If the endpoints return a `404` response, there is no user entry in the database and you can skip the first two steps of the procedure.
+====
+
 .Procedure
 
-. Get the __<username>__ user __<id>__ `id`: navigate to pass:c,m,a,q[+https:+//__<{prod-host}>__]/swagger/#/user/find_1, click btn:[Try it out], set *name*: __<username>__, and click btn:[Execute]. Scroll down the *Response body* to find the `id` value.
-// +
-// [subs="+quotes,macros,attributes"]
-// ----
-// $ curl -X GET \
-//   --cookie '_oauth_proxy=__<token>__' \
-//   'pass:c,m,a,q[+https:+//__<{prod-host}>__]/api/user/find?name=__<username>__'
-// ----
+. Get the __<username>__ user __<id>__ `id`:
+.. Navigate to `pass:c,m,a,q[+https:+//__<{prod-host}>__]/swagger/#/user/find_1`.
+.. Click btn:[Try it out], set *name*: __<username>__, and click btn:[Execute].
+.. Scroll down the *Response body* to find the `id` value.
 
-. Remove the __<id>__ user data that {prod-short} server manages, such as user preferences: navigate to pass:c,m,a,q[+https:+//__<{prod-host}>__]/swagger/#/user/remove, click btn:[Try it out], set *id*: __<id>__, and click btn:[Execute]. Expect a `204` response code:
-// +
-// [subs="+quotes,macros,attributes"]
-// ----
-// $ curl -i -X DELETE \
-//   --cookie '_oauth_proxy=__<token>__' \
-//   'pass:c,m,a,q[+https:+//__<{prod-host}>__]/api/user/__<id>__'
-// ----
+. Remove the __<id>__ user data managed by {prod-short} server, such as user preferences: 
+.. Navigate to `pass:c,m,a,q[+https:+//__<{prod-host}>__]/swagger/#/user/remove`.
+.. Click btn:[Try it out], set *id*: __<id>__, and click btn:[Execute]. Expect a `204` response code:
 
 . Delete the user {orch-namespace} to remove all {orch-name} resources bound to the user, such as workspaces, secrets, and configmaps.
 +
