--- a/modules/administration-guide/pages/configuring-observability.adoc
+++ b/modules/administration-guide/pages/configuring-observability.adoc
@@ -2,14 +2,13 @@
 :description: Configuring observability
 :keywords: administration-guide, configuring, observability, logs, monitoring
 :navtitle: Configuring observability
-:page-aliases: .:retrieving-che-logs.adoc, .:viewing-kubernetes-events.adoc, viewing-kubernetes-events.adoc, .:viewing-plug-in-broker-logs.adoc, viewing-plug-in-broker-logs.adoc, retrieving-che-logs.adoc, viewing-che-server-logs.adoc, viewing-external-service-logs.adoc
+:page-aliases: .:retrieving-che-logs.adoc, .:viewing-kubernetes-events.adoc, viewing-kubernetes-events.adoc, .:viewing-plug-in-broker-logs.adoc, viewing-plug-in-broker-logs.adoc, retrieving-che-logs.adoc, viewing-che-server-logs.adoc, viewing-external-service-logs.adoc, che-theia-workspaces.adoc
 
 [id="configuring-observability"]
 = Configuring observability
 
 To configure {prod-short} observability features, see:
 
-* xref:che-theia-workspaces.adoc[]
 * xref:configuring-server-logging.adoc[]
 * xref:collecting-logs-using-chectl.adoc[]
 * xref:monitoring-the-dev-workspace-operator.adoc[]
