--- a/modules/administration-guide/pages/removing-user-data.adoc
+++ b/modules/administration-guide/pages/removing-user-data.adoc
@@ -19,7 +19,8 @@ Following this procedure makes the service compliant to EU General Data Protecti
 
 * An active `oc` session with administrative permissions to the OpenShift cluster. See link:https://docs.openshift.com/container-platform/{ocp4-ver}/cli_reference/openshift_cli/getting-started-cli.html[Getting started with the OpenShift CLI].
 
-[WARNING]: 
+[WARNING]
+==== 
 The `pass:c,m,a,q[+https:+//__<{prod-host}>__]/swagger/#/user/find_1` and `pass:c,m,a,q[+https:+//__<{prod-host}>__]/swagger/#/user/remove` endpoints are deprecated. 
 Information about new users is no longer stored in the PostgreSQL database. If the endpoints return a `404` response, there is no user entry in the database and you can skip the first two steps of the procedure.
 ====
