initial changes in response to Mario's feedback

--- a/modules/end-user-guide/pages/cloud-ides-in-workspaces.adoc
+++ b/modules/end-user-guide/pages/cloud-ides-in-workspaces.adoc
@@ -23,7 +23,7 @@ include::example$snip_{project-context}-table-of-supported-editors.adoc[]
 
 == Repository-level IDE configuration in {prod-short}
 
-The most convenient way of using a cloud IDE in {prod-short} is to store IDE configuration files directly in the remote Git repository that contains your project source code and that will be cloned for a new workspace. This way, one common IDE configuration will be applied to all new workspaces that will feature a clone of that repository. Such IDE configuration files might include the following:
+You can store IDE configuration files directly in the remote Git repository that contains your project source code and that will be cloned for a new workspace. This way, one common IDE configuration will be applied to all new workspaces that will feature a clone of that repository. Such IDE configuration files might include the following:
 
 * xref:defining-a-common-ide.adoc[The `/.che/che-editor.yaml` file] that stores a definition of the chosen IDE.
 
