--- a/modules/end-user-guide/pages/using-a-git-provider-access-token.adoc
+++ b/modules/end-user-guide/pages/using-a-git-provider-access-token.adoc
@@ -45,7 +45,7 @@ If you have the link:https://www.gnu.org/software/coreutils/base64[base64] comma
 
 ====
 
-. Open `pass:c,a,q[{prod-url}]/api/user/id` in the web browser to get your {prod-short} user ID.
+. Go to `pass:c,a,q[{prod-url}]/api/user/id` in the web browser to get your {prod-short} user ID.
 
 . Get your Git provider user ID by following the Git provider's API documentation:
 +
