fix: review and edit PR 2555 > docs: Updating GDPR user removal flow, and procedure for obtaining user ID (#2557)
* docs: Updating GDPR user removal flow, and procedure for obtaining user ID

Signed-off-by: Ilya Buziuk <ibuziuk@redhat.com>

* Update modules/administration-guide/pages/removing-user-data.adoc

* fix: review and edit PR 2555

---------

Signed-off-by: Ilya Buziuk <ibuziuk@redhat.com>
Co-authored-by: Ilya Buziuk <ibuziuk@redhat.com>
Co-authored-by: Jana Vrbkova <jvrbkova@redhat.com>

--- a/modules/administration-guide/nav.adoc
+++ b/modules/administration-guide/nav.adoc
@@ -70,7 +70,7 @@
 **** xref:configuring-oauth-1-for-a-bitbucket-server.adoc[]
 **** xref:configuring-oauth-2-for-the-bitbucket-cloud.adoc[]
 *** xref:configuring-the-administrative-user.adoc[]
-*** xref:removing-user-data.adoc[]
+*** xref:removing-user-data-in-compliance-with-the-gdpr.adoc[]
 * xref:managing-ide-extensions.adoc[]
 ** xref:extensions-for-microsoft-visual-studio-code-open-source.adoc[]
 * xref:managing-workloads-using-the-che-server-api.adoc[]
