docs: NFS not supported warning (rhdevdocs-4580) (#2544)
Co-authored-by: Max Leonov <mleonov@redhat.com>

--- a/modules/administration-guide/pages/configuring-storage.adoc
+++ b/modules/administration-guide/pages/configuring-storage.adoc
@@ -7,4 +7,9 @@
 [id="configuring-storage"]
 = Configuring storage
 
+[WARNING]
+====
+{prod-short} does not support the Network File System (NFS) protocol.
+====
+
 * xref:installing-che-using-storage-classes.adoc[]
