feat: Azure DevOps Service OAuth2
Signed-off-by: Anatolii Bazko <abazko@redhat.com>

--- a/modules/end-user-guide/pages/using-a-git-provider-access-token.adoc
+++ b/modules/end-user-guide/pages/using-a-git-provider-access-token.adoc
@@ -70,15 +70,17 @@ metadata:
     che.eclipse.org/scm-url: __<git_provider_endpoint>__# <3>
     che.eclipse.org/scm-userid: '__<git_provider_user_id>__'# <4>
     che.eclipse.org/scm-username: __<git_provider_username>__
+    che.eclipse.org/scm-organization: __<git_provider_organization>__# <5>
 data:
   token: __<Base64_encoded_access_token>__
 type: Opaque
 ----
 +
 <1> Your {prod-short} user ID.
-<2> The Git provider name: `github` or `gitlab` or `bitbucket-server`.
+<2> The Git provider name: `github` or `gitlab`, `bitbucket-server` or `azure-devops`.
 <3> The Git provider URL.
 <4> Your Git provider user ID.
+<5> Your Git provider user organization only for `azure-devops` Git provider.
 
 . Visit `pass:c,a,q[{prod-url}]/api/kubernetes/namespace` to get your {prod-short} user namespace as `name`.
 
