--- a/modules/administration-guide/pages/oauth-for-github-gitlab-or-bitbucket.adoc
+++ b/modules/administration-guide/pages/oauth-for-github-gitlab-or-bitbucket.adoc
@@ -1,7 +1,7 @@
 :_content-type: CONCEPT
-:description: OAuth for GitHub, GitLab, or Bitbucket
-:keywords: bitbucket
-:navtitle: OAuth for Azure DevOps Service, GitHub, GitLab or Bitbucket
+:description: OAuth for Microsoft Azure DevOps Services, GitHub, GitLab, or Bitbucket
+:keywords: azure, bitbucket, gitlab, github
+:navtitle: OAuth for Microsoft Azure DevOps Services, GitHub, GitLab or Bitbucket
 // :page-aliases:
 
 [id="oauth-for-github-gitlab-or-bitbucket"]
@@ -9,7 +9,7 @@
 
 To enable users to work with remote Git repositories:
 
-* xref:configuring-oauth-2-for-azure-devops-service.adoc[]
+* xref:configuring-oauth-2-for-microsoft-azure-devops-service.adoc[]
 * xref:configuring-oauth-2-for-github.adoc[]
 * xref:configuring-oauth-2-for-gitlab.adoc[]
 * Configuring xref:configuring-oauth-2-for-a-bitbucket-server.adoc[OAuth 2.0 for a Bitbucket Server] or xref:configuring-oauth-2-for-the-bitbucket-cloud.adoc[OAuth 2.0 for the Bitbucket Cloud]
