--- a/modules/administration-guide/partials/proc_applying-the-microsoft-azure-devops-services-oauth-app-secret.adoc
+++ b/modules/administration-guide/partials/proc_applying-the-microsoft-azure-devops-services-oauth-app-secret.adoc
@@ -13,7 +13,7 @@ Prepare and apply the Microsoft Azure DevOps Services Secret.
 
 * Setting up the Microsoft Azure DevOps Services OAuth App is completed.
 
-* The Base64-encoded values, which were generated when setting up the Microsoft Azure DevOps Service OAuth App, are prepared:
+* The Base64-encoded values, which were generated when setting up the Microsoft Azure DevOps Services OAuth App, are prepared:
 ** *Application ID*
 ** *Client Secret*
 
