--- a/modules/administration-guide/partials/proc_setting-up-the-microsoft-azure-devops-services-oauth-app.adoc
+++ b/modules/administration-guide/partials/proc_setting-up-the-microsoft-azure-devops-services-oauth-app.adoc
@@ -29,14 +29,14 @@ Set up a Microsoft Azure DevOps Services OAuth App using OAuth 2.0.
 
 . Click *Create application*.
 
-. Copy the *App ID* and encode it to Base64 for use when applying the Microsoft Azure DevOps Service OAuth App Secret:
+. Copy the *App ID* and encode it to Base64 for use when applying the Microsoft Azure DevOps Services OAuth App Secret:
 +
 [subs="+quotes,+attributes,+macros"]
 ----
 $ echo -n '__<microsoft_azure_devops_services_oauth_app_id>__' | base64
 ----
 
-. Click *Show* next to Client Secret and Copy the *Client Secret* and encode it to Base64 for use when applying the Microsoft Azure DevOps Service OAuth App Secret:
+. Click *Show* next to Client Secret and Copy the *Client Secret* and encode it to Base64 for use when applying the Microsoft Azure DevOps Services OAuth App Secret:
 +
 [subs="+quotes,+attributes,+macros"]
 ----
