--- a/modules/administration-guide/pages/configuring-oauth-2-for-microsoft-azure-devops-services.adoc
+++ b/modules/administration-guide/pages/configuring-oauth-2-for-microsoft-azure-devops-services.adoc
@@ -1,7 +1,7 @@
 :_content-type: ASSEMBLY
 :description: Configuring OAuth 2.0 for Microsoft Azure DevOps Services
-:keywords: configuring-oauth, authorization, microsoft azure devops, microsoft azure repos, oauth-2, oauth-2.0
-:navtitle: Configuring OAuth 2.0 for Microsoft Azure DevOps Service
+:keywords: configuring-oauth, authorization, microsoft azure devops services, microsoft azure repos, oauth-2, oauth-2.0
+:navtitle: Configuring OAuth 2.0 for Microsoft Azure DevOps Services
 :page-aliases:
 
 [id="configuring-oauth-2-for-microsoft-azure-devops-services"]
