--- a/modules/administration-guide/partials/proc_setting-up-the-microsoft-azure-devops-services-oauth-app.adoc
+++ b/modules/administration-guide/partials/proc_setting-up-the-microsoft-azure-devops-services-oauth-app.adoc
@@ -11,7 +11,7 @@ Set up a Microsoft Azure DevOps Services OAuth App using OAuth 2.0.
 
 .Prerequisites
 
-* You are logged in to https://azure.microsoft.com/en-us/products/devops/repos[Microsoft Azure Repos]
+* You are logged in to https://azure.microsoft.com/en-us/products/devops/[Microsoft Azure DevOps Services]
 * link:https://www.gnu.org/software/coreutils/base64[`base64`] is installed in the operating system you are using.
 
 .Procedure
