Add a Vale pass due to a proprietary product name.

--- a/modules/administration-guide/pages/configuring-oauth-2-for-microsoft-azure-devops-services.adoc
+++ b/modules/administration-guide/pages/configuring-oauth-2-for-microsoft-azure-devops-services.adoc
@@ -7,7 +7,9 @@
 [id="configuring-oauth-2-for-microsoft-azure-devops-services"]
 = Configuring OAuth 2.0 for Microsoft Azure DevOps Services
 
+pass:[<!-- vale RedHat.Spelling = NO -->]
 To enable users to work with a remote Git repository that is hosted on Microsoft Azure Repos:
+pass:[<!-- vale RedHat.Spelling = YES -->]
 
 . Set up the Microsoft Azure DevOps Services OAuth App (OAuth 2.0).
 . Apply the Microsoft Azure DevOps Services OAuth App Secret.
