--- a/modules/end-user-guide/pages/troubleshooting-slow-workspaces.adoc
+++ b/modules/end-user-guide/pages/troubleshooting-slow-workspaces.adoc
@@ -48,7 +48,7 @@ _Role: Administrator_
 +
 For each endpoint, {orch-name} is creating {platforms-ingress} objects. Depending on the underlying configuration, this creation can be slow.
 +
-To avoid this problem, reduce the exposure. For example, to automatically detect a new port listening inside containers and redirect traffic for the processes using a local IP address (`127.0.0.1`), the Che-Theia IDE plugin has three optional routes.
+To avoid this problem, reduce the exposure. For example, to automatically detect a new port listening inside containers and redirect traffic for the processes using a local IP address (`127.0.0.1`), Microsoft Visual Code - Open Source has three optional routes.
 +
 By reducing the number of endpoints and checking endpoints of all plugins, workspace start can be faster.
 
