Add info about starting a workspace from raw devfile location
Signed-off-by: Igor Vinokur <ivinokur@redhat.com>

--- a/modules/end-user-guide/pages/starting-a-new-workspace-with-a-clone-of-a-git-repository.adoc
+++ b/modules/end-user-guide/pages/starting-a-new-workspace-with-a-clone-of-a-git-repository.adoc
@@ -35,6 +35,7 @@ To start a new workspace with a clone of a Git repository:
 . Optional: Visit your {prod-short} dashboard pages to authenticate to your organization's instance of {prod-short}.
 
 . Visit the URL to start a new workspace using the basic syntax:
+.. Using a Git repository URL:
 [source,subs="+quotes,+attributes,+macros"]
 +
 ----
@@ -75,6 +76,30 @@ When the new workspace is ready, the workspace IDE loads in the browser tab.
 A clone of the Git repository is present in the filesystem of the new workspace.
 +
 The workspace has a unique URL: `pass:c,a,q[{prod-url}]#workspace__<unique_url>__`.
+
+.. Using a direct URL to `devfile`:
+[source,subs="+quotes,+attributes,+macros"]
++
+----
+pass:c,a,q[{prod-url}]#__<url_to_devfile>__
+----
++
+[TIP]
+====
+You can pass Personal Access Token to the URL to have access to private repositories:
+[source,subs="+quotes,+attributes,+macros"]
+----
+pass:c,a,q[{prod-url}]#__https://__<token>__@__<host>__/__<path> <1>
+----
+<1> See xref:using-a-git-provider-access-token.adoc[].
+====
++
+.A URL for starting a new workspace from devfile location
+====
+
+`pass:c,a,q[{prod-url}#https://raw.githubusercontent.com/che-samples/cpp-hello-world/main/devfile.yaml]`
+
+====
 
 [TIP]
 ====
