--- a/modules/administration-guide/partials/proc_setting-up-the-microsoft-azure-devops-services-oauth-app.adoc
+++ b/modules/administration-guide/partials/proc_setting-up-the-microsoft-azure-devops-services-oauth-app.adoc
@@ -25,7 +25,7 @@ Set up a Microsoft Azure DevOps Services OAuth App using OAuth 2.0.
 .. *Application website*: `pass:c,a,q[{prod-url}]/`
 .. *Authorization callback URL*: `pass:c,a,q[{prod-url}]/api/oauth/callback`
 
-. *Select Authorized scopes*: `Code (full)`.
+. *Select Authorized scopes*: `Code (read and write)`.
 
 . Click *Create application*.
 
