fixup! Add info about starting a workspace from raw devfile location

--- a/modules/end-user-guide/pages/starting-a-new-workspace-with-a-clone-of-a-git-repository.adoc
+++ b/modules/end-user-guide/pages/starting-a-new-workspace-with-a-clone-of-a-git-repository.adoc
@@ -92,6 +92,8 @@ You can pass Personal Access Token to the URL to have access to private reposito
 pass:c,a,q[{prod-url}]#__https://__<token>__@__<host>__/__<path> <1>
 ----
 <1> See xref:using-a-git-provider-access-token.adoc[].
+
+This would work for GitHub, GitLab, Bitbucket, Microsoft Azure, and other providers that support Personal Access Token.
 ====
 +
 .A URL for starting a new workspace from devfile location
